<resources>
    <string name="app_name">ChatFlix</string>
    <string name="permission_sinch">This application needs permission to use your microphone to function properly.</string>
    <string name="notify_sinch">You may now place a call</string>

    <string name="friend_chat">FriendChat</string>

    <string name="chat">CHAT</string>
    <string name="group">GROUP</string>
    <string name="info">INFO</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_email">Email</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="get_started">Get Started</string>
    <string name="just_a_few_details_to_get_you_started">Just a few details to get you started</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_message">Are you sure you want to log out?</string>
    <string name="sure_want_to_reset_password">Are you sure you want to reset password?</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_username">Edit Display Name</string>
    <string name="users">Users</string>
    <string name="online">online</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed">Failed</string>
    <string name="avatar">Avatar</string>
    <string name="sure_want_to_change_avatar">Are you sure you want to change profile picture?</string>
    <string name="select_picture">Select Picture</string>
    <string name="error_occured_please_try_again">Error occured. Please try again!</string>
    <string name="avatar_updating">Avatar updating....</string>
    <string name="avatar_field">avatar</string>
    <string name="success">Success</string>
    <string name="update_avatar_success">Update avatar successfully!</string>
    <string name="error_upload_avatar">False to update avatar</string>
    <string name="name_field">name</string>
    <string name="default_field">default</string>
    <string name="email">email</string>
    <string name="user_id">user_id</string>
    <string name="password_field">password</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="fill_all_requirements">Must fill all requirements!</string>
    <string name="register_user">Register User</string>
    <string name="creating_user">Creating user...</string>
    <string name="friend_request">Friend Request</string>
    <string name="accept">Accept</string>
    <string name="remove">Remove</string>
    <string name="please_wait">Please wait....!</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="email_not_found">Email not found</string>
    <string name="sending_email">Sending email...</string>
    <string name="we_sent_email_reset_password">We sent a reset password to your email! Please check your email</string>
    <string name="email_password_invalid">Email or Password is invalid! Please try again!</string>
    <string name="add_at_least_two_people">Add at lease two people to create group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="group_id">groupId</string>
    <string name="editing">Editing....</string>
    <string name="admin">admin</string>
    <string name="cannot_connect_database">Cannot connect database</string>
    <string name="registering">Registering....</string>
    <string name="edit_group_success">Edit group success</string>
    <string name="create_group_success">Create group success</string>
    <string name="create_group_failed">Create group failed!</string>
    <string name="kind_of_chat">Kind Of Chat</string>
    <string name="group_chat">GroupChat</string>
    <string name="edit_group">Edit group</string>
    <string name="delete_group">Delete group</string>
    <string name="leave_group">Leave group</string>
    <string name="text">text</string>
    <string name="id_sender">idSender</string>
    <string name="id_receiver">idReceiver</string>
    <string name="timestamp">timestamp</string>
    <string name="duration">duration</string>
    <string name="type">type</string>
    <string name="true_field">true</string>
    <string name="online_status">Online</string>
    <string name="message_images">message_images</string>
    <string name="message_files">message_files</string>
    <string name="image_field">image</string>
    <string name="id_friend">idFriend</string>
    <string name="error">Error</string>
    <string name="error_delete_friend">Error occurred during deleting friend</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete </string>
    <string name="deleting">Deleting...</string>
    <string name="is_online">isOnline</string>
    <string name="friend_field">friend</string>
    <string name="delete_friend_successfully">Friend deleting successfully</string>
    <string name="call_field">call</string>
    <string name="group_table">Group</string>
    <string name="group_leaving">Group leaving....</string>
    <string name="group_field">group</string>
    <string name="member">member</string>
    <string name="group_info">groupInfo</string>
    <string name="you_are_not_admin">You are not admin</string>
    <string name="admin_cannot_leave_group">Admin cannot leave group!</string>
    <string name="group_deleted">Group Deleted</string>
    <string name="group_leaving_successfully">Group leaving successfully</string>
    <string name="cannot_send_email_to">Cannot to sent email to </string>
    <string name="email_sent_to">Email sent to </string>
    <string name="failed_registration">Failed Registration: </string>
    <string name="message_table">Message</string>
    <string name="get_all_friend">Get all friend....</string>
    <string name="add_friend">Add friend</string>
    <string name="enter_friend_email">Enter friend email</string>
    <string name="finding_friend">Finding friend....</string>
    <string name="adding_friend">Add friend....</string>
    <string name="add_friend_failed">An error occured during adding friend!</string>
    <string name="add_friend_success">Add friend successfully</string>
    <string name="friend_title">Friend</string>
    <string name="request_table">Request</string>
    <string name="send_request_friend_success">Send request to friend successfully!</string>
    <string name="delete_request_successfully">Delete request successfully!</string>
    <string name="app_name_content">Chat Flix</string>
    <string name="folder">Folder</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="chat_flix">chatflix</string>
    <string name="status_field">status</string>
    <string name="cannot_add_your_self">Không thể kết bạn với chính mình!</string>
    <string name="title_fbid_notification_new">Thông báo</string>
    <string name="body_fbid_notification_new">Bạn có thông báo mới, mở ứng dụng để xem</string>
    <string name="online_chat_table">OnlineChat</string>
    <string name="friend_intent">friend_intent</string>
    <string name="sent_to"> sent to </string>
    <string name="sent_you_request"> sent you friend request!</string>
    <string name="people_sent_request"> people sent you friend request!</string>
    <string name="and"> and </string>
    <string name="room">Room</string>
    <string name="missed_call">Missed call</string>
    <string name="incoming_call">Incoming Call....</string>
    <string name="calling">Calling </string>
    <string name="cannot_make_call">Can\'t make a call! Your friend is not online</string>
    <string name="you_may_answer_call">You may now answer the call</string>
    <string name="permission_audio">This application needs permission to use your microphone to function properly.</string>
    <string name="is_calling"> is calling ..</string>
    <string name="was_in_your_list_friend"> was in your list friend!</string>
    <string name="User">User </string>
    <string name="file_field">file</string>
    <string name="link">link</string>
    <string name="a_friend_request">a friend request!</string>
    <string name="you_have_sent_to">You have sent to</string>
    <string name="permission_granted">Permission Granted</string>
</resources>
