<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/new_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:title="Create Account"
        app:titleTextColor="#fff"
        android:background="@color/colorPrimary">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColorHint="#e3e3e3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_name"
                android:inputType="text"
                android:textColor="#ffffff"
                android:drawableStart="@drawable/ic_person" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColorHint="#e3e3e3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:drawableStart="@drawable/ic_email" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColorHint="#e3e3e3">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:drawableStart="@drawable/ic_lock" />

        </android.support.design.widget.TextInputLayout>

        <RadioButton
            android:id="@+id/radioButtonReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to_the_terms_and_conditions"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:button="@drawable/radio_button"
            android:paddingStart="5dp"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnCreateAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:background="@drawable/register_button"
            android:text="@string/register"
            android:textColor="#ffff" />
    </LinearLayout>
</RelativeLayout>
